Fix mobile menu items not showing

--- a/src/app/components/top-menu/top-menu.component.css
+++ b/src/app/components/top-menu/top-menu.component.css
@@ -1,7 +1,3 @@
 header {
   height: 80px;
 }
-
-.mobile-menu-container {
-  contain: content;
-}
